Project complete: Excuse me, but, holy hell, I did it? This was cool and I actually did it.

--- a/style.css
+++ b/style.css
@@ -31,3 +31,13 @@ body {
   background-color: rgba(0, 0, 0, 0.553);
   border: 1px solid white;
 }
+
+.pigs {
+  color: #d188d1;
+  color: #cae22c;
+  color: #324cd0;
+  color: #d18888;
+  color: #9cd188;
+  color: #e116c9;
+  color: #83ea2f;
+}
